# tcp_server_client_application

./: .gitignore  CMakeLists.txt  README.md  TASK_README.md  config.yaml  output.proto
include/: tcp_client.h  tcp_server.h
python_client/: requirements.txt  tcp_client.py
src/: client_main.cpp  main.cpp  server_main.cpp  tcp_client.cpp  tcp_server.cpp  utils.cpp
test/: test_tcp_client.cpp  test_tcp_server.cpp
